--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Campus Macha</title>
+  <script defer src="main.js"></script>
 </head>
 <body>
-  <h1>Este es un placeholder. El HTML completo se insertará desde el canvas.</h1>
+  <main></main>
 </body>
 </html>
