--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Campus Macha</title>
+  <script src="https://cdn.tailwindcss.com"></script>
   <script defer src="main.js"></script>
 </head>
-<body>
-  <main></main>
+<body class="bg-white text-gray-900 font-sans">
+  <main class="p-4 max-w-6xl mx-auto">
+    <h1 class="text-3xl font-bold text-center mb-6">Campus Macha</h1>
+    <div id="cursos-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"></div>
+  </main>
 </body>
 </html>
