--- a/index.html
+++ b/index.html
@@ -5,12 +5,29 @@
   <meta charset="UTF-8">
   <title>Campus Macha</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://www.paypal.com/sdk/js?client-id=sb&currency=EUR"></script>
   <script defer src="main.js"></script>
 </head>
-<body class="bg-white text-gray-900 font-sans">
-  <main class="p-4 max-w-6xl mx-auto">
-    <h1 class="text-3xl font-bold text-center mb-6">Campus Macha</h1>
-    <div id="cursos-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"></div>
+<body class="bg-gradient-to-b from-orange-100 via-white to-green-50 min-h-screen font-sans text-gray-900">
+  <header class="bg-orange-500 text-white py-6 shadow-md text-center">
+    <h1 class="text-4xl font-extrabold">Campus Macha</h1>
+    <p class="text-lg mt-1 italic">Aprendé a cocinar como un chef profesional</p>
+  </header>
+
+  <main class="p-6 max-w-7xl mx-auto">
+    <section class="mb-12">
+      <h2 class="text-2xl font-bold mb-4 text-center text-orange-600">Nuestros Cursos</h2>
+      <div id="cursos-grid" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6"></div>
+    </section>
+    <div id="paypal-container" class="fixed bottom-4 right-4 bg-white p-4 rounded-xl shadow-lg hidden z-50">
+      <div class="text-center mb-2 font-semibold text-gray-800" id="paypal-course-name"></div>
+      <div id="paypal-button-container"></div>
+      <button onclick="cerrarPaypal()" class="mt-3 text-sm text-red-600 underline">Cancelar</button>
+    </div>
   </main>
+
+  <footer class="bg-gray-800 text-white text-center py-4 mt-12">
+    <p>&copy; 2025 Campus Macha | Contacto: <a href="mailto:campusmacha@gmail.com" class="underline">campusmacha@gmail.com</a></p>
+  </footer>
 </body>
 </html>
