--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Campus Macha - Cursos de Cocina Online</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://www.paypal.com/sdk/js?client-id=sb&currency=EUR"></script>
-  <script defer src="main.js"></script>
+  <script defer src="main.js?v=3"></script>
 </head>
 <body class="bg-orange-50 text-gray-900 font-sans">
   <header class="relative w-full h-[90vh] overflow-hidden">
